--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   path: ^1.8.3
   path_provider: ^2.0.15
   provider: ^6.0.5
+  fl_chart: ^0.62.0
+  pie_chart: ^5.3.2
   
 
 dev_dependencies:
